--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@ margin-top: 25%;
 
 }
 h1{
-  margin-left: 36%;
+  /* margin-left: 36%; */
+  justify-content: center;
+  display: flex;
   font-size: 35px;
   font-style: bold;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- 
+  align-self: center;
+  margin-top: -90px;
+}
+#container{
+  align-self: center;
+  justify-content: center;
+  display: flex;
+  
 }
